# grimoire

./: Cargo.toml  README.md
assets/: lock.txt  title.txt
extension/: background.js  content.js  manifest.json  popup.html  popup.js
src/: app.rs  ipc.rs  lib.rs  main.rs  secret.rs  ui.rs
src/ui/: edit.rs  init.rs  login.rs  main.rs  mod.rs  utils.rs
