[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
rand_argon_compatible = { package = "rand", version = "0.8" }
argon2 = "0.5.3"
cursive = "0.21.1"
aes-gcm = "0.10.3"
base64 = "0.22.1"
crossterm = "0.29.0"
ratatui = "0.29.0"
toml = "0.9.8"
dirs = "6.0.0"
arboard = "3.6.1"
cli-clipboard = "0.4.0"

[[bin]]
name = "grimoire"
path = "src/main.rs"
